--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
                 </div>
             </section>
         </div>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
